--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,14 @@ flask-mongoengine==0.9.3
 ipykernel==4.6.1
 ipython==5.4.1
 ipython-genutils==0.2.0
+ipywidgets==6.0.0
 jupyter-client==5.1.0
+jupyter-core==4.3.0
 mongoengine==0.13.0
 nbconvert==5.2.1
 nbformat==4.3.0
+pymongo==3.5.0
+redis==2.10.6
+rq==0.8.1
+rq-dashboard==0.3.8
+subprocess32==3.2.7
